# keypad

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  readme.md
examples/: basic.rs
src/: example_generated.rs  lib.rs  mock_hal.rs
